// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DisplayComponent renders $displayName for account 1`] = `
<div>
  Account
  <b>
    description
  </b>
  <span>
    is
  </span>
  <b>
    "this is a description"
  </b>
</div>
`;

exports[`DisplayComponent renders $displayName for individual 1`] = `
<div>
  Individual
  <b>
    description
  </b>
  <span />
  <b>
    "Map { "criterionGroup": Map { "items": List [ Map { "operatorName": "eq", "propertyName": "foo/bar", "value": "this is a description" }, Map { "operatorName": "eq", "propertyName": "score", "value": "true" } ] }, "operator": "ge", "value": 32 }"
  </b>
</div>
`;

exports[`DisplayComponent renders $displayName for interest 1`] = `
<div>
  Internet
  <span>
    is
  </span>
  <span>
    interested in
  </span>
  <b>
    "this is a description"
  </b>
</div>
`;

exports[`DisplayComponent renders $displayName for session 1`] = `
<div>
  Session
  <b>
    description
  </b>
  <span>
    is
  </span>
  <b>
    "this is a description"
  </b>
  <span>
    on
  </span>
  <span>
    Invalid date
  </span>
</div>
`;

exports[`DisplayComponent renders $displayName for web 1`] = `
<div>
  Web
  <span />
  <span>
    description
  </span>
  <span>
    at least
  </span>
  <b>
    32
  </b>
  <span>
    time(s)
  </span>
  <span>
    ever
  </span>
</div>
`;
